Bug 63777 - Missing #include <sys/wait.h> in src/udiskslinuxfilesystem.c for WEXITSTATUS and WIFEXITED
Summary: Missing #include <sys/wait.h> in src/udiskslinuxfilesystem.c for WEXITSTATUS ...
Status: RESOLVED FIXED
Alias: None
Product: udisks
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-21 14:58 UTC by Samuli Suominen
Modified: 2014-12-18 09:56 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
proper #include <sys/wait.h> for W* defines (501 bytes, text/plain)
2013-04-21 14:58 UTC, Samuli Suominen
Details

Description Samuli Suominen 2013-04-21 14:58:16 UTC
Created attachment 78294 [details]
proper #include <sys/wait.h> for W* defines

Same problem as with polkit in bug 62220, missing #include <sys/wait.h> for WIFEXITED and WEXITSTATUS defines:

/bin/sh ../libtool  --tag=CC   --mode=compile sh4-unknown-linux-gnu-gcc -DHAVE_CONFIG_H -I. -I.. -I.. -I.. -DPACKAGE_LIBEXEC_DIR=\""/usr/libexec"\" -DPACKAGE_SYSCONF_DIR=\""/etc"\" -DPACKAGE_DATA_DIR=\""/usr/share"\" -DPACKAGE_BIN_DIR=\""/usr/bin"\" -DPACKAGE_LOCALSTATE_DIR=\""/var"\" -DPACKAGE_LOCALE_DIR=\""/usr/share/locale"\" -DPACKAGE_LIB_DIR=\""/usr/lib"\" -D_POSIX_PTHREAD_SEMANTICS -D_REENTRANT -DUDISKS_COMPILATION -pthread -I/usr/include/polkit-1 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  -I/usr/include/gudev-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  -pthread -I/usr/include/gio-unix-2.0/ -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  -Wall -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Wno-sign-compare     -I.. -DG_LOG_DOMAIN=\"udisksd\" -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  -pthread -I/usr/include/gio-unix-2.0/ -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  -I/usr/include/gudev-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include   -pthread -I/usr/include/polkit-1 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include     -O2 -m4 -pipe -Waggregate-return -Wall -W -Wextra -Wcast-align -Wdeclaration-after-statement -Wendif-labels -Werror=format-security -Werror=implicit-function-declaration -Werror=overflow -Wformat-nonliteral -Wformat=2 -Wimplicit -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-format-attribute -Wmissing-include-dirs -Wmissing-noreturn -Wmissing-prototypes -Wnested-externs -Wno-inline -Wno-long-long -Wno-missing-field-initializers -Wno-overlength-strings -Wno-switch-enum -Wno-unused-parameter -Wno-unused-result -Wold-style-definition -Wpacked -Wpointer-arith -Wshadow -Wsign-compare -Wstrict-aliasing=2 -Wstrict-prototypes -Wundef -Wuninitialized -Wunsafe-loop-optimizations -Wvla -Wwrite-strings -fdata-sections -fdiagnostics-show-option -ffast-math -ffunction-sections -fno-common -fno-strict-aliasing -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -c -o libudisks_daemon_la-udiskslinuxfilesystem.lo `test -f 'udiskslinuxfilesystem.c' || echo './'`udiskslinuxfilesystem.c
libtool: compile:  sh4-unknown-linux-gnu-gcc -DHAVE_CONFIG_H -I. -I.. -I.. -I.. -DPACKAGE_LIBEXEC_DIR=\"/usr/libexec\" -DPACKAGE_SYSCONF_DIR=\"/etc\" -DPACKAGE_DATA_DIR=\"/usr/share\" -DPACKAGE_BIN_DIR=\"/usr/bin\" -DPACKAGE_LOCALSTATE_DIR=\"/var\" -DPACKAGE_LOCALE_DIR=\"/usr/share/locale\" -DPACKAGE_LIB_DIR=\"/usr/lib\" -D_POSIX_PTHREAD_SEMANTICS -D_REENTRANT -DUDISKS_COMPILATION -pthread -I/usr/include/polkit-1 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/gudev-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -pthread -I/usr/include/gio-unix-2.0/ -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -Wall -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Wno-sign-compare -I.. -DG_LOG_DOMAIN=\"udisksd\" -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -pthread -I/usr/include/gio-unix-2.0/ -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/gudev-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -pthread -I/usr/include/polkit-1 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -O2 -m4 -pipe -Waggregate-return -Wall -W -Wextra -Wcast-align -Wdeclaration-after-statement -Wendif-labels -Werror=format-security -Werror=implicit-function-declaration -Werror=overflow -Wformat-nonliteral -Wformat=2 -Wimplicit -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-format-attribute -Wmissing-include-dirs -Wmissing-noreturn -Wmissing-prototypes -Wnested-externs -Wno-inline -Wno-long-long -Wno-missing-field-initializers -Wno-overlength-strings -Wno-switch-enum -Wno-unused-parameter -Wno-unused-result -Wold-style-definition -Wpacked -Wpointer-arith -Wshadow -Wsign-compare -Wstrict-aliasing=2 -Wstrict-prototypes -Wundef -Wuninitialized -Wunsafe-loop-optimizations -Wvla -Wwrite-strings -fdata-sections -fdiagnostics-show-option -ffast-math -ffunction-sections -fno-common -fno-strict-aliasing -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -c udiskslinuxfilesystem.c  -fPIC -DPIC -o .libs/libudisks_daemon_la-udiskslinuxfilesystem.o
udiskslinuxfilesystem.c: In function 'calculate_mount_options':
udiskslinuxfilesystem.c:691:53: warning: declaration of 'daemon' shadows a global declaration [-Wshadow]
udiskslinuxfilesystem.c: In function 'calculate_mount_point':
udiskslinuxfilesystem.c:836:51: warning: declaration of 'daemon' shadows a global declaration [-Wshadow]
udiskslinuxfilesystem.c: In function 'handle_mount':
udiskslinuxfilesystem.c:1123:17: warning: declaration of 'daemon' shadows a global declaration [-Wshadow]
udiskslinuxfilesystem.c:1294:11: error: implicit declaration of function 'WIFEXITED' [-Werror=implicit-function-declaration]
udiskslinuxfilesystem.c:1294:11: warning: nested extern declaration of 'WIFEXITED' [-Wnested-externs]
udiskslinuxfilesystem.c:1294:11: error: implicit declaration of function 'WEXITSTATUS' [-Werror=implicit-function-declaration]
udiskslinuxfilesystem.c:1294:11: warning: nested extern declaration of 'WEXITSTATUS' [-Wnested-externs]
udiskslinuxfilesystem.c: In function 'handle_unmount':
udiskslinuxfilesystem.c:1539:17: warning: declaration of 'daemon' shadows a global declaration [-Wshadow]
udiskslinuxfilesystem.c: In function 'handle_set_label':
udiskslinuxfilesystem.c:1815:17: warning: declaration of 'daemon' shadows a global declaration [-Wshadow]
cc1: some warnings being treated as errors
make[4]: *** [libudisks_daemon_la-udiskslinuxfilesystem.lo] Error 1

The attached trivial patch fixes the problem
Comment 1 Martin Pitt 2014-12-18 09:56:41 UTC
Fixed in http://cgit.freedesktop.org/udisks/commit/?id=0d24350ca5

Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.