Add missing #include

udiskslinuxfilesystem.c:1294:11: error: implicit declaration of function 'WIFEXITED' [-Werror=implicit-function-declaration]
udiskslinuxfilesystem.c:1294:11: error: implicit declaration of function 'WEXITSTATUS' [-Werror=implicit-function-declaration]

https://bugs.freedesktop.org/show_bug.cgi?id=63777
http://bugs.gentoo.org/462784